# vizzu-story-js

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  dev-requirements.in  dev-requirements.txt  eslint.config.mjs  index.html  jest.config.js  package-lock.json  package.json  pyproject.toml  rollup.config.cjs  rollup.config.js  scrollyTelling.css  style.css  versions.json  vizzu-slides.js
.github/workflows/: cd.yml  ci.yml  cicd.yml  doc.yml  init.yml  release.yml
.husky/: pre-commit  pre-push
0.3/: 404.html  index.html  sitemap.xml
0.3/CODE_OF_CONDUCT/: index.html
0.3/CONTRIBUTING/: index.html
0.3/LICENSE/: index.html
0.3/dev/: index.html
0.3/examples/: index.html
0.3/installation/: index.html
0.3/reference/: index.html
0.3/search/: search_index.json
0.3/tutorial/: index.html
0.4/: 404.html  index.html  sitemap.xml
0.4/CODE_OF_CONDUCT/: index.html
0.4/CONTRIBUTING/: index.html
0.4/LICENSE/: index.html
0.4/dev/: index.html
0.4/examples/: index.html
0.4/installation/: index.html
0.4/reference/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  sitemap.xml
0.6/: 404.html  index.html  sitemap.xml
0.7/: 404.html  index.html  sitemap.xml
0.8/: 404.html  index.html  sitemap.xml
docs/: data.js  index.html  index.js  installation.md  reference.md  style.js  vizzu-controller.js  vizzu-player.js  vizzu-slides.css  vizzu-slides.js
src/: AnimationQueue.js  vizzu-controller.js  vizzu-player.js  vizzu-story.d.ts
(+606 files in other folders)
