[project]
name = "vizzu-story-dev"
version = "0.1.0"
description = ""
authors = [
    {name = "Vizzu Inc.", email = "hello@vizzu.io"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm.dev-dependencies]
codequality = [
    "black",
    "pylint",
    "mypy",
]
docs = [
    "setuptools",
    "mdformat",
    "mdformat-beautysh",
    "mdformat-black",
    "mdformat-configurable-black",
    "mdformat-config",
    "mdformat-web",
    "mdformat-gfm",
    "mdformat-tables",
    "mdformat-footnote",
    "mdformat-frontmatter",
    "mdformat-mkdocs",
    "mdx_truly_sane_lists",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocs-literate-nav",
    "mkdocs-autorefs",
    "mkdocs-gen-files",
    "mkdocs-exclude",
    "mike @ git+https://github.com/jimporter/mike.git@master",
    "pyyaml",
    "types-pyyaml",
]

[tool.pylint.messages-control]
disable = ["fixme"]
good-names= ["i", "df"]